src/static/css/site.css
/* ... */
.info-card p:last-child {
  margin-bottom: 0;
}

/* Custom hash links */

.content-heading {
  border-bottom: 3px double transparent;
  margin-bottom: -3px;
}

.content-heading.highlight-hash-link {
  animation: highlight-hash-link 4s;
  animation-delay: 125ms;
}

dl dt.content-heading {
  /* Basic margin-bottom for dt is 2px,
   * so just subtract 3px from that.
   */
  margin-bottom: -1px;
}

h3.content-heading {
  clear: both;
}

/* This animation's name is referenced in JavaScript */
@keyframes highlight-hash-link {
  0% {
    border-bottom-color: transparent;
  }

  10% {
    border-bottom-color: white;
  }

  25% {
    border-bottom-color: white;
  }

  100% {
    border-bottom-color: transparent;
  }
}

/* Sticky heading */

[id] {
  --custom-scroll-offset: 0px;
}

#content [id] {
  /* Adjust scroll margin. */
  scroll-margin-top: calc(
      74px /* Sticky heading */
    + 33px /* Sticky subheading */
    - 1em  /* One line of text (align bottom) */
    - 12px /* Padding for hanging letters & focus ring */
    + var(--custom-scroll-offset) /* Customizable offset */
  );
}

.content-sticky-heading-container {
  position: sticky;
  top: 0;

  margin: calc(-1 * var(--content-padding));
  margin-bottom: calc(0.5 * var(--content-padding));

  transform: translateY(-5px);
}

main.long-content .content-sticky-heading-container {
  padding-left: 0;
  padding-right: 0;
}

main.long-content .content-sticky-heading-container .content-sticky-heading-row,
main.long-content .content-sticky-heading-container .content-sticky-subheading-row {
  padding-left: calc(var(--long-content-padding-ratio) * (100% - 2 * var(--content-padding)) + var(--content-padding));
  padding-right: calc(var(--long-content-padding-ratio) * (100% - 2 * var(--content-padding)) + var(--content-padding));
}

.content-sticky-heading-row {
  box-sizing: border-box;
  padding:
    calc(1.25 * var(--content-padding) + 5px)
    20px
    calc(0.75 * var(--content-padding))
    20px;

  width: 100%;
  margin: 0;

  background: var(--bg-black-color);
  border-bottom: 1px dotted rgba(220, 220, 220, 0.4);

  -webkit-backdrop-filter: blur(6px);
          backdrop-filter: blur(6px);
}

.content-sticky-heading-container.has-cover .content-sticky-heading-row,
.content-sticky-heading-container.has-cover .content-sticky-subheading-row {
  display: grid;
  grid-template-areas:
    "title cover";
  grid-template-columns: 1fr min(40%, 400px);
}

.content-sticky-heading-row h1 {
  margin: 0;
  padding-right: 20px;
}

.content-sticky-heading-cover-container {
  position: relative;
  height: 0;
  margin: -15px 0px -5px -5px;
}

.content-sticky-heading-cover-needs-reveal {
  display: none;
}

.content-sticky-heading-cover {
  position: absolute;
  top: 0;
  width: 80px;
  right: 10px;
  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.25);
  transition: transform 0.35s, opacity 0.25s;
}

.content-sticky-heading-cover-container:not(.visible) .content-sticky-heading-cover {
  opacity: 0;
  transform: translateY(15px);
  transition: transform 0.35s, opacity 0.30s;
}

.content-sticky-heading-cover .image-container {
  border-width: 1px;
  border-radius: 1.25px;
  box-shadow: none;
}

.content-sticky-heading-container .image-outer-area {
  padding: 3px;
}

.content-sticky-heading-container .image-inner-area {
  border-radius: 1.75px;
  overflow: hidden;
}

.content-sticky-heading-cover .image {
  display: block;
  width: 100%;
  height: 100%;
}

.content-sticky-subheading-row {
  position: absolute;
  width: 100%;
  box-sizing: border-box;
  padding: 10px 20px 5px 20px;
  margin-top: 0;
  z-index: -1;

  background: var(--bg-black-color);
  border-bottom: 1px dotted rgba(220, 220, 220, 0.4);
  box-shadow:
    0 2px 2px -1px #00000060,
    0 4px 12px -4px #00000090;

  -webkit-backdrop-filter: blur(4px);
          backdrop-filter: blur(4px);

  transition: margin-top 0.35s, opacity 0.25s;
}

.content-sticky-subheading-row h2 {
  margin: 0;

  font-size: 0.9em !important;
  font-weight: normal;
  font-style: oblique;
  color: #eee;
}

.content-sticky-subheading-row:not(.visible) {
  margin-top: -20px;
  opacity: 0;
}

.content-sticky-subheading {
  padding-right: 20px;
}

.content-sticky-heading-container h2.visible {
  margin-top: 0;
  opacity: 1;
}

.content-sticky-heading-row {
  box-shadow:
    inset 0 10px 10px -5px var(--shadow-color),
    0 4px 8px -4px #000000b0;
}

#content, .sidebar {
  contain: paint;
}

/* Sticky sidebar */

.sidebar-column:not(.sticky-column) {
  align-self: stretch;
}

.sidebar-column.sticky-column {
  position: sticky;
  top: 10px;
  align-self: flex-start;
  max-height: calc(100vh - 20px);
  display: flex;
  flex-direction: column;
}

.sidebar-multiple.sticky-column .sidebar:last-child {
  flex-shrink: 1;
  overflow-y: scroll;
  scrollbar-width: thin;
  scrollbar-color: var(--dark-color);
}

.wiki-search-sidebar-box .wiki-search-results-container {
  overflow-y: scroll;
  scrollbar-width: thin;
  scrollbar-color: var(--dark-color);
}

.sidebar-column.sticky-column .sidebar:last-child::-webkit-scrollbar,
.wiki-search-sidebar-box .wiki-search-results-container::-webkit-scrollbar {
  background: var(--dark-color);
  width: 12px;
}

.sidebar-column.sticky-column .sidebar:last-child::-webkit-scrollbar-thumb,
.wiki-search-sidebar-box .wiki-search-results-container::-webkit-scrollbar-thumb {
  transition: background 0.2s;
  background: rgba(255, 255, 255, 0.2);
  border: 3px solid transparent;
  border-radius: 10px;
  background-clip: content-box;
}

.sidebar-column.sidebar.sticky-column > h1 {
  position: sticky;
  top: 0;
  z-index: 2;

  margin: 0 calc(-1 * var(--content-padding));
  margin-bottom: 10px;

  border-bottom: 1px dotted rgba(220, 220, 220, 0.4);
  padding: 10px 5px;

  background: var(--bg-black-color);
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);

  box-shadow:
    0 2px 3px -1px #0006,
    0 4px 8px -2px #0009;
}
/* ... */

